@@ -225,7 +225,17 @@ install_cache()
 single_user()
 {
 	ewarn "Booting into single user mode..." && eline
-	setsid cttyhack /bin/bash -c "chroot ${NEW_ROOT} /bin/bash --login"
+
+	mount -t proc none ${NEW_ROOT}/proc
+	mount --rbind /dev ${NEW_ROOT}/dev
+	mount --rbind /sys ${NEW_ROOT}/sys
+
+	setsid cttyhack /bin/bash -c "chroot ${NEW_ROOT} /bin/bash --login -c 'cat /proc/mounts > /etc/mtab'"
+
+	ewarn "Leaving single user mode stuff, unmounting devices..."
+
+	umount ${NEW_ROOT}/proc
+	umount -l ${NEW_ROOT}/dev ${NEW_ROOT}/sys
 }
 
 ### Utility Functions ###
